--- a/2mac.css
+++ b/2mac.css
@@ -1,255 +1,315 @@
 * {
-    margin: 0;
-    padding: 0;
+        margin: 0;
+        padding: 0;
 }
 
 a {
-    text-decoration: none;
+        text-decoration: none;
 }
 
 img {
-    max-width: 100%;
+        max-width: 100%;
 }
 
 body {
-    font-family: 'Playfair Display', serif;
-
+        padding-left: calc(50% - 1290px / 2);
+        padding-right: calc(50% - 1290px / 2);
+        font-family: 'Playfair Display', serif;
 }
 
 .all {
-    flex-grow: 1;
+        flex-grow: 1;
 }
 
 .PF {
-    font-weight: 500;
-    font-style: normal;
-    color: white;
-    font-size: 150px;
+        font-weight: 500;
+        font-style: normal;
+        color: white;
+        font-size: 26px;
+        list-style-type: none;
 }
 
 .port {
-    
-    color: white;
-    font-size: 130px;
+        color: white;
+        font-size: 24px;
 }
 
-.header {padding: 0px;
-    gap: 8px;
-    background: #21252F;
-    display: flex;
-    align-items: center;
-    flex-direction: column-reverse;
-
-}
-.class{
-    float: left;
-  margin-right: 50px;
- 
+.link {
+        list-style-type: none;
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
 }
 
+.header {
+        padding: 16px;
+        gap: 8px;
+        background: #21252F;
+        display: flex;
+        align-items: center;
+        flex-direction: column-reverse;
 
-.logo {
-    margin-left: 54px;
-    width: 250px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+}
+
+.img1 {
+        width: 60px;
 }
 
 .cont {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        align-items: flex-start;
+        line-height: 1.5;
 }
 
 .cont-sec {
-    max-width: 2385px;
+        margin-left: 35px;
+        margin-top: 13%;
 }
 
-.h1 {font-weight: 600;
-    font-style: italic;
-    margin-top: 15px;
-    font-size: 90px;
+.h1 {
+        font-weight: 600;
+        font-style: italic;
+        margin-top: 15px;
+        font-size: 18px;
 }
 
-.text {font-weight: 400;
-    font-size: 70px;
-    margin-top: 15px;
+.text {
+        font-weight: 400;
+        font-size: 18px;
+        margin-top: 15px;
 }
 
 .footer {
-    background: #21252F;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    text-align: center;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 50px;
-    line-height: 23px;
-    color: rgba(255, 255, 255, 0.5);
-    margin-top: 32px;
+        margin-top: 30px;
+        background: #21252F;
+        text-align: center;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 40px;
+        color: rgba(255, 255, 255, 0.5);
+
 }
-
-
 
 .text-focus-in {
-	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
-	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;}
-            @-webkit-keyframes text-focus-in {
-                0% {
-                  -webkit-filter: blur(12px);
-                          filter: blur(12px);
-                  opacity: 0;
-                }
-                100% {
-                  -webkit-filter: blur(0px);
-                          filter: blur(0px);
-                  opacity: 1;
-                }
-              }
-              @keyframes text-focus-in {
-                0% {
-                  -webkit-filter: blur(12px);
-                          filter: blur(12px);
-                  opacity: 0;
-                }
-                100% {
-                  -webkit-filter: blur(0px);
-                          filter: blur(0px);
-                  opacity: 1;
-                }
-              }
-              .kenburns-top {
-                -webkit-animation: kenburns-top 5s ease-out both;
-                        animation: kenburns-top 5s ease-out both;}
-                        @-webkit-keyframes kenburns-top {
-  0% {
-    -webkit-transform: scale(1) translateY(0);
-            transform: scale(1) translateY(0);
-    -webkit-transform-origin: 50% 16%;
-            transform-origin: 50% 16%;
-  }
-  100% {
-    -webkit-transform: scale(1.25) translateY(-15px);
-            transform: scale(1.25) translateY(-15px);
-    -webkit-transform-origin: top;
-            transform-origin: top;
-  }
+        -webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 }
+
+@-webkit-keyframes text-focus-in {
+        0% {
+                -webkit-filter: blur(12px);
+                filter: blur(12px);
+                opacity: 0;
+        }
+
+        100% {
+                -webkit-filter: blur(0px);
+                filter: blur(0px);
+                opacity: 1;
+        }
+}
+
+@keyframes text-focus-in {
+        0% {
+                -webkit-filter: blur(12px);
+                filter: blur(12px);
+                opacity: 0;
+        }
+
+        100% {
+                -webkit-filter: blur(0px);
+                filter: blur(0px);
+                opacity: 1;
+        }
+}
+
+.kenburns-top {
+        -webkit-animation: kenburns-top 5s ease-out both;
+        animation: kenburns-top 5s ease-out both;
+}
+
+@-webkit-keyframes kenburns-top {
+        0% {
+                -webkit-transform: scale(1) translateY(0);
+                transform: scale(1) translateY(0);
+                -webkit-transform-origin: 50% 16%;
+                transform-origin: 50% 16%;
+        }
+
+        100% {
+                -webkit-transform: scale(1.25) translateY(-15px);
+                transform: scale(1.25) translateY(-15px);
+                -webkit-transform-origin: top;
+                transform-origin: top;
+        }
+}
+
 @keyframes kenburns-top {
-  0% {
-    -webkit-transform: scale(1) translateY(0);
-            transform: scale(1) translateY(0);
-    -webkit-transform-origin: 50% 16%;
-            transform-origin: 50% 16%;
-  }
-  100% {
-    -webkit-transform: scale(1.25) translateY(-15px);
-            transform: scale(1.25) translateY(-15px);
-    -webkit-transform-origin: top;
-            transform-origin: top;
-  }
+        0% {
+                -webkit-transform: scale(1) translateY(0);
+                transform: scale(1) translateY(0);
+                -webkit-transform-origin: 50% 16%;
+                transform-origin: 50% 16%;
+        }
+
+        100% {
+                -webkit-transform: scale(1.25) translateY(-15px);
+                transform: scale(1.25) translateY(-15px);
+                -webkit-transform-origin: top;
+                transform-origin: top;
+        }
 }
 
 .heartbeat {
-	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
-	        animation: heartbeat 1.5s ease-in-out infinite both;
+        -webkit-animation: heartbeat 1.5s ease-in-out infinite both;
+        animation: heartbeat 1.5s ease-in-out infinite both;
 }
+
 @-webkit-keyframes heartbeat {
-    from {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-transform-origin: center center;
-              transform-origin: center center;
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    10% {
-      -webkit-transform: scale(0.91);
-              transform: scale(0.91);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    17% {
-      -webkit-transform: scale(0.98);
-              transform: scale(0.98);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    33% {
-      -webkit-transform: scale(0.87);
-              transform: scale(0.87);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    45% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-  }
-  @keyframes heartbeat {
-    from {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-transform-origin: center center;
-              transform-origin: center center;
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    10% {
-      -webkit-transform: scale(0.91);
-              transform: scale(0.91);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    17% {
-      -webkit-transform: scale(0.98);
-              transform: scale(0.98);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-    33% {
-      -webkit-transform: scale(0.87);
-              transform: scale(0.87);
-      -webkit-animation-timing-function: ease-in;
-              animation-timing-function: ease-in;
-    }
-    45% {
-      -webkit-transform: scale(1);
-              transform: scale(1);
-      -webkit-animation-timing-function: ease-out;
-              animation-timing-function: ease-out;
-    }
-  }
-  
+        from {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+                -webkit-transform-origin: center center;
+                transform-origin: center center;
+                -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        }
 
+        10% {
+                -webkit-transform: scale(0.91);
+                transform: scale(0.91);
+                -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+        }
 
-  img{
-    display: block;
-      object-fit: cover
-  }
-  
-  .elem{
-    overflow: hidden;
+        17% {
+                -webkit-transform: scale(0.98);
+                transform: scale(0.98);
+                -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        }
+
+        33% {
+                -webkit-transform: scale(0.87);
+                transform: scale(0.87);
+                -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+        }
+
+        45% {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+                -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        }
+}
+
+@keyframes heartbeat {
+        from {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+                -webkit-transform-origin: center center;
+                transform-origin: center center;
+                -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        }
+
+        10% {
+                -webkit-transform: scale(0.91);
+                transform: scale(0.91);
+                -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+        }
+
+        17% {
+                -webkit-transform: scale(0.98);
+                transform: scale(0.98);
+                -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        }
+
+        33% {
+                -webkit-transform: scale(0.87);
+                transform: scale(0.87);
+                -webkit-animation-timing-function: ease-in;
+                animation-timing-function: ease-in;
+        }
+
+        45% {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+                -webkit-animation-timing-function: ease-out;
+                animation-timing-function: ease-out;
+        }
+}
+
+img {
+        display: block;
+        object-fit: cover
+}
+
+.elem {
+        overflow: hidden;
         animation: anim 1s linear forwards;
-  }
-  
-  @keyframes anim{
-    50%{
-      opacity: 0;
-      width: 0;
-    }
-    100%{
-      opacity: 1;
-      
-    }
-  }
-  .block-animation {
+}
+
+@keyframes anim {
+        50% {
+                opacity: 0;
+                width: 0;
+        }
+
+        100% {
+                opacity: 1;
+
+        }
+}
+
+.kenburns-top {
+        -webkit-animation: kenburns-top 5s ease-out both;
+        animation: kenburns-top 5s ease-out both;
+}
+
+@-webkit-keyframes kenburns-top {
+        0% {
+                -webkit-transform: scale(1) translateY(0);
+                transform: scale(1) translateY(0);
+                -webkit-transform-origin: 50% 16%;
+                transform-origin: 50% 16%;
+        }
+
+        100% {
+                -webkit-transform: scale(1.25) translateY(-15px);
+                transform: scale(1.25) translateY(-15px);
+                -webkit-transform-origin: top;
+                transform-origin: top;
+        }
+}
+
+@keyframes kenburns-top {
+        0% {
+                -webkit-transform: scale(1) translateY(0);
+                transform: scale(1) translateY(0);
+                -webkit-transform-origin: 50% 16%;
+                transform-origin: 50% 16%;
+        }
+
+        100% {
+                -webkit-transform: scale(1.25) translateY(-15px);
+                transform: scale(1.25) translateY(-15px);
+                -webkit-transform-origin: top;
+                transform-origin: top;
+        }
+}
+
+.block-animation {
         color: #ffffff;
-    transition: background-color 1s linear;
-  }
-  
-  .block-animation:hover {
-    color: #ffe607;
-  }
+        transition: background-color 1s linear;
+}
+
+.block-animation:hover {
+        color: #ffe607;
+}
